{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fc69f195-dc85-40f3-ad8d-c569df3806a2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2a182664-c483-4292-ac17-729e869249a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "b17c4aed-ba5d-4cca-874f-9e11ca7e9117",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5dd1686f-4d17-4d20-9814-91ee476b0cbc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9752b179-1685-4d91-bef8-89c1d039d91c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use Weapon Effect",
                    "type": "Button",
                    "id": "9ca6b1e7-5081-46b1-b7fa-54013743d0c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use Special Item",
                    "type": "Button",
                    "id": "01731cde-8f75-40dc-b1e0-b97db2d47236",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousWeapon",
                    "type": "Button",
                    "id": "78bde57f-06c0-4966-8144-174e0a22d667",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextWeapon",
                    "type": "Button",
                    "id": "0153511a-5754-4b77-8ac1-fede7a3710ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "One Clicked",
                    "type": "Button",
                    "id": "5218f735-2b8e-4f6e-8a49-3aca4f12c9c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Two Clicked",
                    "type": "Button",
                    "id": "fb43fc55-8b24-435e-ad35-a782aa0fbc5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Three Clicked",
                    "type": "Button",
                    "id": "31f775a5-e8c0-4e62-8bc4-a918969cd7fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "7c9255e6-c7c3-4737-9fbe-a1bf2af248dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f422f1b4-5854-4f98-a881-c379d23ad384",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2f1899da-f638-4dc4-9158-161f254e18ad",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1003bdd1-7ff4-497c-87e5-80c72260454e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e7dfcda3-30bc-48f4-95f3-c5ff891a8ee9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "99d0060c-04a6-446e-b530-0a7479613044",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "24428238-40e0-48a8-9a1e-ef49de3bb67b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27dca33d-2740-4696-8097-92a9789c23ba",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7dd226c-8987-483c-91b3-7969d4956002",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49accb7f-d870-411f-9f6f-d1f71fc92fee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use Weapon Effect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ada037ec-3d1a-41f4-9a13-377059a07eb1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use Special Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edd1a38f-3145-45a1-8876-c976a3511d41",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b835121a-3e06-4260-93b0-dcf2487d0354",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7732b06-42c7-46fc-bd52-1e4b5ea17ada",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "One Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f18ecee-a586-4add-81cd-53ba5a7ea03b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c81a91e7-8638-443b-a7b6-a91503367920",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Three Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5623ce08-4360-4c8b-956e-3c5088bf541b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PassiveSelect",
            "id": "dca0978e-0171-41af-bc28-8f7454c4fb0f",
            "actions": [
                {
                    "name": "One Clicked",
                    "type": "Button",
                    "id": "a0a960ef-e204-42e7-867b-1fb206f533cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Two Clicked",
                    "type": "Button",
                    "id": "954dd9ba-9473-485c-9d57-b026c53e0524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Three Clicked",
                    "type": "Button",
                    "id": "143d4c3f-0af3-4035-ac89-fe2a186b357b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5564bee3-9cb0-40a5-979d-40f052075cad",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "One Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9a57e88-b10f-43a8-af1c-09b42f0cb02d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84c58466-adf2-4ef8-8106-1c41f2601735",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Three Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WeaponReplace",
            "id": "9f372a46-fe32-4b77-93af-44db526b235a",
            "actions": [
                {
                    "name": "One Clicked",
                    "type": "Button",
                    "id": "2128ba78-d0ca-406e-a650-37879fa5ebe4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Two Clicked",
                    "type": "Button",
                    "id": "dbc1a4d0-9353-4132-9253-c91ca4ac9572",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Three Clicked",
                    "type": "Button",
                    "id": "6a2f0ad6-fe1a-4f6f-9af3-1094d8a09daf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31a0bcf1-5999-495b-bcda-b87529ad63d4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "One Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c92e29a0-a527-4a5f-9b83-c704de9881a5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92fabf29-3b4d-4dfd-b48e-76935bd05a57",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Three Clicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}